--- a/MapEditorExtension.csproj
+++ b/MapEditorExtension.csproj
@@ -5,11 +5,11 @@
     <AssemblyName>MapEditorExtension</AssemblyName>
     <RootNamespace>MapEditorExtension</RootNamespace>
     <Authors>z7572</Authors>
-    <Version>1.3</Version>
+    <Version>1.4</Version>
     <Product>MapEditorExtension</Product>
     <Description>A BepInEx mod for Stick Fight: The Game</Description>
-    <AssemblyVersion>1.3</AssemblyVersion>
-    <FileVersion>1.3</FileVersion>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
     <RunPostBuildEvent>Always</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
