--- a/EditorExtension.csproj
+++ b/EditorExtension.csproj
@@ -2,11 +2,11 @@
   <PropertyGroup>
     <TargetFramework>net35</TargetFramework>
     <LangVersion>preview</LangVersion>
-    <AssemblyName>MapEditorExtension</AssemblyName>
-    <RootNamespace>MapEditorExtension</RootNamespace>
+    <AssemblyName>EditorExtension</AssemblyName>
+    <RootNamespace>EditorExtension</RootNamespace>
     <Authors>z7572</Authors>
-    <Version>1.4.1</Version>
-    <Product>MapEditorExtension</Product>
+    <Version>1.5</Version>
+    <Product>EditorExtension</Product>
     <Description>A BepInEx mod for Stick Fight: The Game</Description>
     <AssemblyVersion></AssemblyVersion>
     <FileVersion></FileVersion>
@@ -15,12 +15,12 @@
   <ItemGroup>
 	<PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
 	<PackageReference Include="BepInEx.Core" Version="5.*" />
-	<PackageReference Include="BepInEx.PluginInfoProps" Version="1.*" />
+	<PackageReference Include="BepInEx.PluginInfoProps" Version="2.1.0" />
 	<PackageReference Include="UnityEngine.Modules" Version="5.6.3" IncludeAssets="compile" />
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.3" PrivateAssets="all" />
   </ItemGroup>
   
   <ItemGroup>
