--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "MapEditorExtension": {
+    "EditorExtension": {
       "commandName": "Executable",
       "executablePath": "C:\\Windows\\System32\\cmd.exe",
       "commandLineArgs": "/c \"start steam://rungameid/674940\"",
